Proper delimiting of curl

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,7 @@ cache:
 script:
 - "./gradlew test"
 - if [ -n "$TRAVIS_TAG" ]; then
-    curl https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip -o jdk-windows.zip
+    curl https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip -o jdk-windows.zip;
     ./gradlew desktop:packrLinux32;
     ./gradlew desktop:packrLinux64;
     ./gradlew desktop:packrWindows32;
