--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,7 @@ cache:
     - $HOME/.android/build-cache
 
 script:
-- "./gradlew test"
-
-    #curl https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip -o jdk-windows.zip
-    
+- ./gradlew test    
 - if [ -n "$TRAVIS_TAG" ]; then
     wget  -O jdk-windows.zip https://github.com/ojdkbuild/ojdkbuild/releases/download/java-1.8.0-openjdk-1.8.0.232-1.b09/java-1.8.0-openjdk-1.8.0.232-1.b09.ojdkbuild.windows.x86_64.zip;
     ./gradlew desktop:packrWindows32;
