Resolved #1420 - Menu in the map editor no longer opens multiple times on subsequent clicks

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -41,7 +41,7 @@ android {
         release {
             // Don't add local save files and fonts to release, obviously
             aaptOptions {
-                ignoreAssetsPattern "!SaveFiles:!fonts:!maps:!music"
+                ignoreAssetsPattern "!SaveFiles:!fonts:!maps:!music:!mods"
             }
         
             minifyEnabled false
