--- a/android/build.gradle
+++ b/android/build.gradle
@@ -21,8 +21,8 @@ android {
         applicationId "com.unciv.app"
         minSdkVersion 14
         targetSdkVersion 29
-        versionCode 340
-        versionName "3.3.7-patch1"
+        versionCode 341
+        versionName "3.3.8"
 
         archivesBaseName = "Unciv"
     }
