Fixed quote typo

--- a/android/assets/jsons/translationsByLanguage/Czech.properties
+++ b/android/assets/jsons/translationsByLanguage/Czech.properties
@@ -950,7 +950,7 @@ Horseback Riding = Jízda na koni
 Mathematics = Matematika
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 'Matematika je bránou a klíčem do světa vědy' - Roger Bacon
 Construction = Konstrukce
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 'Na budově musí být zřetelné tři věci: že stojí na správném místě, že má pevné základy, že je kvalitně postavena.' - Johann Wolfgang von Goethe
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 'Na budově musí být zřetelné tři věci: že stojí na správném místě, že má pevné základy, že je kvalitně postavena.' - Johann Wolfgang von Goethe
 Philosophy = Filozofie
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 'Existuje jen jedno dobro a to je vědění. Existuje jen jedno zlo a to je nevědomost.' - Sókratés
 Currency = Platidlo
