--- a/android/assets/jsons/translationsByLanguage/French.properties
+++ b/android/assets/jsons/translationsByLanguage/French.properties
@@ -984,7 +984,7 @@ Horseback Riding = Équitation
 Mathematics = Mathématiques
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 'Les mathématiques sont la porte et la clé des sciences.' - Roger Bacon
 Construction = Construction
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 'Il faut examiner trois choses dans un bâtiment: qu'il se trouve au bon endroit; qu'il soit solidement bâti; qu'il soit construit avec habilité.' - Johann Wolfgang von Goethe
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 'Il faut examiner trois choses dans un bâtiment: qu'il se trouve au bon endroit; qu'il soit solidement bâti; qu'il soit construit avec habilité.' - Johann Wolfgang von Goethe
 Philosophy = Philosophie
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 'Il n'y a qu'une bonne chose, la connaissance, et une seule mauvaise, l'ignorance.' - Socrates
 Currency = Monnaie
