--- a/android/assets/jsons/translationsByLanguage/German.properties
+++ b/android/assets/jsons/translationsByLanguage/German.properties
@@ -1010,7 +1010,7 @@ Mathematics = Mathematik
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 
 Construction = Baukunst
  # Requires translation!
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 
 Philosophy = Philosophie
  # Requires translation!
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 
