--- a/android/assets/jsons/translationsByLanguage/Italian.properties
+++ b/android/assets/jsons/translationsByLanguage/Italian.properties
@@ -935,7 +935,7 @@ Horseback Riding = Equitazione
 Mathematics = Matematica
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 'La matematica è la porta e la chiave delle scienze.' - Ruggero Bacone
 Construction = Costruzione
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 'Di un edificio bisogna guardare tre cose: che sia collocato nel posto giusto; che abbia fondamenta solide; che la costruzione sia eseguita con perizia.' - Johann Wolfgang von Goethe
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 'Di un edificio bisogna guardare tre cose: che sia collocato nel posto giusto; che abbia fondamenta solide; che la costruzione sia eseguita con perizia.' - Johann Wolfgang von Goethe
 Philosophy = Filosofia
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 'C'è un solo bene, la conoscenza, e un solo male, l'ignoranza.' - Socrate
 Currency = Valuta
