--- a/android/assets/jsons/translationsByLanguage/Korean.properties
+++ b/android/assets/jsons/translationsByLanguage/Korean.properties
@@ -944,7 +944,7 @@ Horseback Riding = 기마술
 Mathematics = 수학
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = '수학은 다른 과학으로 가는 문이자 열쇠다.' - 로저 베이컨
 Construction = 건설
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = '건물에서는 세 가지를 보면 된다. 위치가 올바른가, 토대가 굳건한가, 설계에 충실하게 잘 지어졌는가.' - 요한 볼프강 폰 괴테
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = '건물에서는 세 가지를 보면 된다. 위치가 올바른가, 토대가 굳건한가, 설계에 충실하게 잘 지어졌는가.' - 요한 볼프강 폰 괴테
 Philosophy = 철학
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = '유일한 선은 지식이고, 유일한 악은 무지다.' - 소크라테스
 Currency = 화폐
