--- a/android/assets/jsons/translationsByLanguage/Romanian.properties
+++ b/android/assets/jsons/translationsByLanguage/Romanian.properties
@@ -1385,7 +1385,7 @@ Mathematics = Matematică
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 
 Construction = Arhitectură
  # Requires translation!
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 
 Philosophy = Filozofie
  # Requires translation!
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 
