--- a/android/assets/jsons/translationsByLanguage/Russian.properties
+++ b/android/assets/jsons/translationsByLanguage/Russian.properties
@@ -991,7 +991,7 @@ Horseback Riding = Верховая езда
 Mathematics = Математика
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 'Математика — врата и ключ всех наук.' - Роджер Бэкон
 Construction = Металлоконструкции
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 'Три правила следует помнить при всякой постройке: здание должно стоять на подобающем месте, иметь прочное основание и быть полностью завершено.' - Иоганн Гете
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 'Три правила следует помнить при всякой постройке: здание должно стоять на подобающем месте, иметь прочное основание и быть полностью завершено.' - Иоганн Гете
 Philosophy = Философия
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 'Есть лишь один бог - знание, и лишь один порок - невежество.' - Сократ
 Currency = Деньги
