--- a/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Simplified_Chinese.properties
@@ -947,7 +947,7 @@ Horseback Riding = 骑术
 Mathematics = 数学
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = “数学是通向科学世界的大门钥匙。”——罗杰·培根（中世纪英国科学家）
 Construction = 建筑构造学
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = “在一幢建筑里要看三样东西：它是否被正确地选址；它是否被牢固地奠基；它是否被成功地建造。”——约翰·沃尔夫冈·冯·歌德
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = “在一幢建筑里要看三样东西：它是否被正确地选址；它是否被牢固地奠基；它是否被成功地建造。”——约翰·沃尔夫冈·冯·歌德
 Philosophy = 哲学
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = “世上只有一种善，那就是知识，也只有一种恶，那就是无知。”——苏格拉底
 Currency = 货币制度
