--- a/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
+++ b/android/assets/jsons/translationsByLanguage/Traditional_Chinese.properties
@@ -944,7 +944,7 @@ Horseback Riding = 騎術
 Mathematics = 數學
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = “數學是通向科學世界的大門鑰匙。”——羅傑·培根（中世紀英國科學家）
 Construction = 建築構造學
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = “在一棟建築裡要看三樣東西：它是否被正確選址；它是否被牢固奠基；它是否被成功建造。”——約翰·沃爾夫剛·馮·歌德
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = “在一棟建築裡要看三樣東西：它是否被正確選址；它是否被牢固奠基；它是否被成功建造。”——約翰·沃爾夫剛·馮·歌德
 Philosophy = 哲學
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = “世上只有一種善，那就是知識，也只有一種惡，那就是無知。”——蘇格拉底
 Currency = 貨幣制度
