--- a/android/assets/jsons/translationsByLanguage/template.properties
+++ b/android/assets/jsons/translationsByLanguage/template.properties
@@ -935,7 +935,7 @@ Horseback Riding =
 Mathematics = 
 'Mathematics is the gate and key to the sciences.' - Roger Bacon = 
 Construction = 
-'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfulyl executed.' - Johann Wolfgang von Goethe = 
+'Three things are to be looked to in a building: that it stands on the right spot; that it be securely founded; that it be successfully executed.' - Johann Wolfgang von Goethe = 
 Philosophy = 
 'There is only one good, knowledge, and one evil, ignorance.' - Socrates = 
 Currency = 
